@@ -2,6 +2,7 @@
 
 = 1.25.4 - 2020-XX-XX =
 * Tweak - Remove Stripe connect functionality.
+* Tweak - Remove unused method in shipping settings view.
 
 = 1.25.3 - 2020-11-24 =
 * Add   - Initial code for WooCommerce.com subscriptions API.
